aligned homepage content and fixed stemtell display on My STEMtell feed

--- a/src/components/Homepage/Homepage.css
+++ b/src/components/Homepage/Homepage.css
@@ -2,3 +2,7 @@
     text-align: center;
 }
 
+#HomepageCard{
+    align-content: center;
+    margin-right: 300px;
+}
