--- a/src/components/STEMtellCard/STEMtellCard.css
+++ b/src/components/STEMtellCard/STEMtellCard.css
@@ -1,5 +1,5 @@
 .StemCard {
-  margin: 20px;
+  margin: 6px;
   padding: 16px;
   align-items: center;
   justify-content: center;
